# optimus_pi

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: lint_and_test.yml
optimus_pi/: __init__.py  __main__.py  calibration.py  config.py  config.yml  constants.py  event_handler.py  line_follower.py  manual_drive.py  mode.py  mode_select.py
optimus_pi/tests/: conftest.py  test_calibration.py  test_mode_select.py
src/optimus_pi/: __main__.py  calibration.py  config.py  ds4.py  manual_drive.py  mode_select.py
