[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "optimus_pi"
authors = [
    {name = "Sam Hall"},
]
description = "Software for rasberry pi robot."
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "pyPS4Controller",
]
dynamic = ["version"]

[project.optional-dependencies]
test = ["pytest"]

# [project.scripts]
# my-script = "my_package.module:function"

# ... other project metadata fields as specified in:
#     https://packaging.python.org/en/latest/specifications/declaring-project-metadata/

[tool.setuptools.dynamic]
version = {file = "VERSION"}
