[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "optimus_pi"
authors = [
    {name = "Sam Hall"},
]
description = "Software for rasberry pi robot."
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "pyPS4Controller",
    "gpiozero",
    "rpi-gpio",
]
dynamic = ["version"]

[project.optional-dependencies]
test = ["pytest"]
dev = ["pylint", "flake8", "ruff"]

[project.scripts]
# optimus_pi = "optimus_pi.__main__"

# ... other project metadata fields as specified in:
#     https://packaging.python.org/en/latest/specifications/declaring-project-metadata/

[tool.setuptools.dynamic]
version = {file = "VERSION"}

[tool.isort]
known_first_party = ["optimus_pi"]
