[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "optimus_pi"
authors = [
    {name = "Sam Hall"},
]
description = "Software for rasberry pi robot."
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "pyPS4Controller",
    "PyYAML",
    "gpiozero",
    "rpi-gpio",
]
dynamic = ["version"]

[project.optional-dependencies]
test = ["pytest"]
dev = ["pylint", "flake8", "ruff"]

[project.scripts]
optimus_pi = "optimus_pi.__main__:main"

[tool.setuptools.dynamic]
version = {file = "VERSION"}

[tool.isort]
known_first_party = ["optimus_pi"]

[tool.pylint]
good-names-rgxs = ["on_.*"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Unused imports in __init__.py
